# rinha-2026

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.json  docker-compose.yml  estimated-requests.sh  generate-data.sh  go.mod  go.sum  haproxy.cfg  info.json  nginx.conf  post-run.sh  run.sh  warmup.sh
cmd/api/: default.pgo  main.go
cmd/distill/: main.go
cmd/lb/: main.go
cmd/preprocess/: main.go
config/: env.go
deploy/: nginx.conf
docs/: architecture.md  performance.md  training.md
internal/dataset/: index.go  mmap_unix.go
internal/domain/: constants.go  fraud.go
internal/fdpass/: fdpass.go  recv_linux.go  recv_other.go
internal/fraud/: eval_test.go  intpayload.go  parser.go  parser_fast.go  parser_fast_test.go  parser_test.go  service.go  vectorize.go  vectorize_bench_test.go  vectorize_int.go  vectorize_test.go  warmup.go
internal/search/: dist_amd64.go  dist_amd64.s  dist_other.go  knn.go  knn_test.go
internal/tree/: tree.go  tree_test.go
model/: distill.py  eval_against_testdata.py  export_to_go.py  fraud-detection.ipynb  fraud_dt.py  predict.py  pyproject.toml  readme.md  train.py
pkg/dotenv/: dotenv.go
pkg/logger/: logger.go
routes/: fdpass_listener.go  fraud.go  health.go  rawhttp.go  router.go  server.go
