[project]
name = "rinha-fraud-dt"
version = "0.1.0"
description = "Decision Tree classifier for Rinha 2026 fraud detection"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "ipykernel>=6.29",
    "nbconvert>=7.16",
]

[dependency-groups]
lab = [
    "jupyterlab>=4.2",
]

[tool.uv]
package = false
